--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: DeterminateSystems/nix-installer-action@main
     - uses: DeterminateSystems/magic-nix-cache-action@main
-    - run: nix build -L .#default
+    - run: nix build --argstr system armv7l-linux .#default
     - uses: actions/upload-artifact@v3
       with:
         name: static-build
